Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -1,20 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Notes</title>
+    <title>CDXVIIC</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
+    <style>
+        .outlined-text {
+            font-weight: bold;
+            font-size: 1.8rem;
+             /* Fill color */
+            -webkit-text-stroke: 1px #0069C0;
+            /* Outline color and width */
+            text-align: center;
+        }
+    </style>
+
+    <!-- Bootstrap 4.1.1 CSS -->
+    <link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+
+    <!-- jQuery (optional) -->
+    <script src="node_modules\jquery\dist\jquery.min.js"></script>
+
+    <!-- Bootstrap 4.1.1 JS Bundle (includes Popper)-->
+    <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    <h1>HTML Notes</h1>
+    <div>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+    </div>
+    <div class="container my-4 text-warning outlined-text">
+        <table>
 
-    <div class="alert alert-primary">
-        It works!
-
+            <tr>
+                <td >
+                <td >
+                    <img src="images/NSCDXVIIC-Logo-Color-Trans.png" alt="CDXVII Logo" class="img-thumbnail me-2"
+                        style="height: 150px; width: auto;">
+                </td>
+                <td >
+                    <h3 >Colonial Dames XVII Century</h3>
+                <td class="text text-lg-center p-5">
+                    <h2 class="text-lg-center text-warning">Looking Glass Chapter<br>Lansing, Michigan
+                </td>
+            </tr>
+        </table>
+        </tbody>
     </div>
 
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contactform.html" target="_blank">Contact Form</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+    </div>
 </body>
+
 </html>
