--- a/contactform.html
+++ b/contactform.html
@@ -6,128 +6,195 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CDXVIIC Contact Form</title>
 
-  <!-- Bootstrap 5 CDN -->
+  <!-- Bootstrap 5 CDN for styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
-  <div class="p-3 mb-2 bg-primary-subtle">
-    <div class="container bg-light-subtle mt-4 fs-4">
 
+  <!-- Page container with background color -->
+  <div class="p-3 mb-2 bg-primary-subtle">
+
+    <!-- Navbar -->
+  <header>
+      <div>
+        <nav class="navbar navbar-expand-lg bg-body-secondary">
+          <div class="container-fluid">
+            <!-- Navbar toggle button for mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+  
+            <!-- Collapsible nav items -->
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+              <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0 ">
+  
+                <!-- Active/Home link -->
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+  
+                <!-- Contact Form link -->
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="contactform.html"><b>Join Us</b></a>
+                </li>
+  
+                <!-- Ancestors link -->
+                <li class="nav-item">
+                  <a class="nav-link" href="ancestors.html">Ancestors</a>
+                </li>
+  
+                <!-- Dropdown menu -->
+                <!-- >
+                                  <li class="nav-item dropdown">
+                                      <a class="nav-link dropdown-toggle" href="#" role="button"
+                                          data-bs-toggle="dropdown" aria-expanded="true">
+                                          Dropdown
+                                      </a>
+                                      <ul class="dropdown-menu">
+                                          <li><a class="dropdown-item" href="#">Action</a></li>
+                                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                                          <li>
+                                              <hr class="dropdown-divider">
+                                          </li>
+                                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                      </ul>
+                                  </li>
+                              </!-->
+  
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+  
+  </header>
+    <!-- Informational content section -->
+    <div class="container bg-light-subtle mt-4 fs-6">
       <h1>Join Us</h1>
       <p>Do you have an ancestor in your family tree who lived in the 17th century and either held an office or owned
         land?</p>
-      <p>
-        Someone who fought for our freedom or served in a
-        civil capacity, or aided and supported the patriotic cause in other ways?
-      </p>
-      <p>
-        Colonial Dames XVII Century has been honoring the legacy of America's early settlers through historical
+      <p>Someone who fought for our freedom or served in a civil capacity, or aided and supported the patriotic cause in
+        other ways?</p>
+      <p>Colonial Dames XVII Century has been honoring the legacy of America's early settlers through historical
         preservation, education, and community service since 1915. With its three-part focus on historic preservation,
-        education, and patriotism, the Colonial Dames XVII Century is all about service. There are innumerable ways to
-        get involved and give back to your community by joining a the
-        Looking Glass chapter (or any chapter!). You will not be alone on your journey, we have members available to
-        assist you as you do
-        family research, and the CDXVIIC library is one of the largest genealogical resources in the world.
+        education, and patriotism, the Colonial Dames XVII Century is all about service...</p>
+      <p>If you are interested in joining the Looking Glass Chapter or have questions, please fill out and submit the
+        form below.</p>
+      <p>Thank you for your interest... we will get back to you as soon as possible.</p>
+      <p>For more information, visit the
+        <a href="https://www.colonialdames17c.org/" target="_blank" rel="noopener">
+          Colonial Dames XVII Century</a> website.
       </p>
-      <p>
-        If you are interested in joining the Looking Glass Chapter or have questions about membership, the chapter, or
-        the organization, please fill out and submit the form below.
-      </p>
-
-      <p>Thank you for your interest in the Colonial Dames XVII Century, we will get back to you as soon as possible.
-      </p>
-      <p>For more information about the DAR, please visit the <a href="https://www.colonialdames17c.org/"
-          target="_blank" rel="noopener">Colonial Dames XVII Century</a> website.</p>
     </div>
 
-    <div class="container bg-light-subtle mt-4 fs-5">
+    <!-- Contact Form -->
+    <div class="container bg-light-subtle mt-4 fs-6">
       <form action="mailto:ldavis.dar@gmail.com?subject=CDXVIIC Inquiry" method="post">
-        <div class="row mb-3">
-          <div class="col-md-6 border p-3">
+
+        <div class="row g-3">
+          <!-- First Name -->
+          <div class="col-md-6">
             <label for="firstName" class="form-label">First Name <span class="text-muted">(required)</span></label>
             <input type="text" class="form-control" id="firstName" required>
           </div>
-          <div class="col-md-6 border p-3">
+
+          <!-- Last Name -->
+          <div class="col-md-6">
             <label for="lastName" class="form-label">Last Name <span class="text-muted">(required)</span></label>
             <input type="text" class="form-control" id="lastName" required>
           </div>
-        </div>
 
-        <div class="row mb-3">
-          <div class="col-md-6 border p-3">
+          <!-- Email -->
+          <div class="col-md-6">
             <label for="email" class="form-label">Email <span class="text-muted">(required)</span></label>
             <input type="email" class="form-control" id="email" required>
           </div>
-          <div class="col-md-6 border p-3">
+
+          <!-- Phone -->
+          <div class="col-md-6">
             <label for="phone" class="form-label">Phone Number</label>
             <input type="tel" class="form-control" id="phone">
           </div>
-        </div>
 
-        <div class="row mb-3">
-          <div class="col-md-6 border p-3">
-            <label class="form-label">Best time of day to contact you.</label>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactTime" id="morning"><label
-                class="form-check-label" for="morning">Morning</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactTime" id="evening"><label
-                class="form-check-label" for="evening">Evening (after 6:00 p.m.)</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactTime" id="weekends"><label
-                class="form-check-label" for="weekends">Weekends</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactTime" id="anytime"><label
-                class="form-check-label" for="anytime">Any time is fine.</label></div>
+          <!-- Best time to contact -->
+          <div class="col-md-6">
+            <fieldset class="border rounded p-3">
+              <legend class="fs-6">Best time of day to contact you</legend>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactTime"
+                  id="morning"><label class="form-check-label" for="morning">Morning</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactTime"
+                  id="evening"><label class="form-check-label" for="evening">Evening (after 6:00 p.m.)</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactTime"
+                  id="weekends"><label class="form-check-label" for="weekends">Weekends</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactTime"
+                  id="anytime"><label class="form-check-label" for="anytime">Any time is fine.</label></div>
+            </fieldset>
           </div>
 
-          <div class="col-md-6 border p-3">
-            <label class="form-label">Preferred method of contacting you.</label>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
-                id="emailContact"><label class="form-check-label" for="emailContact">Email</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
-                id="phoneContact"><label class="form-check-label" for="phoneContact">Phone</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
-                id="eitherContact"><label class="form-check-label" for="eitherContact">Either email or phone is
-                fine.</label></div>
-          </div>
-        </div>
-
-        <div class="row mb-3">
-          <div class="col-md-6 border p-3">
-            <label class="form-label">Do you have a relative in CDXVIIC?</label>
-            <div class="form-check"><input class="form-check-input" type="radio" name="darRelative" id="darYes"><label
-                class="form-check-label" for="darYes">Yes</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="darRelative" id="darNo"><label
-                class="form-check-label" for="darNo">No</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="darRelative"
-                id="darUnknown"><label class="form-check-label" for="darUnknown">I don't know</label></div>
+          <!-- Preferred contact method -->
+          <div class="col-md-6">
+            <fieldset class="border rounded p-3">
+              <legend class="fs-6">Preferred method of contacting you</legend>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
+                  id="emailContact"><label class="form-check-label" for="emailContact">Email</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
+                  id="phoneContact"><label class="form-check-label" for="phoneContact">Phone</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="contactMethod"
+                  id="eitherContact"><label class="form-check-label" for="eitherContact">Either email or phone is
+                  fine.</label></div>
+            </fieldset>
           </div>
 
-          <div class="col-md-6 border p-3">
-            <label class="form-label">Do you already know the name of your 17th century ancestor?</label>
-            <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
-                id="patriotYes"><label class="form-check-label" for="patriotYes">Yes (please enter name in Other Details
-                below)</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
-                id="patriotNo"><label class="form-check-label" for="patriotNo">No</label></div>
-            <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
-                id="patriotUnsure"><label class="form-check-label" for="patriotUnsure">I'm not sure.</label></div>
+          <!-- Relative in CDXVIIC -->
+          <div class="col-md-6">
+            <fieldset class="border rounded p-3">
+              <legend class="fs-6">Do you have a relative in CDXVIIC?</legend>
+              <div class="form-check"><input class="form-check-input" type="radio" name="relative" id="Yes"><label
+                  class="form-check-label" for="Yes">Yes</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="relative" id="No"><label
+                  class="form-check-label" for="No">No</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="relative" id="Unknown"><label
+                  class="form-check-label" for="Unknown">I don't know</label></div>
+            </fieldset>
           </div>
-        </div>
 
-        <div class="mb-3 border p-3">
-          <label for="otherDetails" class="form-label">Other Details</label>
-          <textarea class="form-control" id="otherDetails" rows="4"></textarea>
-        </div>
+          <!-- Ancestor knowledge -->
+          <div class="col-md-6">
+            <fieldset class="border rounded p-3">
+              <legend class="fs-6">Do you already know the name of your 17th century ancestor?</legend>
+              <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
+                  id="patriotYes"><label class="form-check-label" for="patriotYes">Yes (please enter name in Other
+                  Details below)</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
+                  id="patriotNo"><label class="form-check-label" for="patriotNo">No</label></div>
+              <div class="form-check"><input class="form-check-input" type="radio" name="patriotName"
+                  id="patriotUnsure"><label class="form-check-label" for="patriotUnsure">I'm not sure.</label></div>
+            </fieldset>
+          </div>
 
-        <div class="d-grid">
-          <button type="submit" class="btn btn-danger btn-lg">Send</button>
+          <!-- Other Details -->
+          <div class="col-12">
+            <label for="otherDetails" class="form-label">Other Details</label>
+            <textarea class="form-control" id="otherDetails" rows="4"></textarea>
+          </div>
+
+          <!-- Submit button -->
+          <div class="col-12 d-grid">
+            <button type="submit" class="btn btn-danger btn-lg">Send</button>
+          </div>
         </div>
       </form>
     </div>
 
   </div>
 
-  <!-- Bootstrap JS (optional if you don’t use dropdowns or modals) -->
+  <!-- Bootstrap JS Bundle (includes dropdowns, collapse, etc.) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
