--- a/index.html
+++ b/index.html
@@ -5,95 +5,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CDXVIIC</title>
+
+    <!-- Local Bootstrap CSS (optional if using CDN) -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css\style.css">
 
-    <style>
-        .outlined-text {
-            font-weight: bold;
-            font-size: 1.8rem;
-             /* Fill color */
-            -webkit-text-stroke: 1px #0069C0;
-            /* Outline color and width */
-            text-align: center;
-        }
-    </style>
+    <!-- Custom CSS for outlined text -->
 
-    <!-- Bootstrap 4.1.1 CSS -->
-    <link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap 5 CSS from CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- jQuery (optional) -->
-    <script src="node_modules\jquery\dist\jquery.min.js"></script>
+    <!-- jQuery (used only if you need scripting support) -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
 
-    <!-- Bootstrap 4.1.1 JS Bundle (includes Popper)-->
-    <script src="node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS Bundle with Popper (for dropdowns, collapses, etc.) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-    <div>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-    </div>
-    <div class="container my-4 text-warning outlined-text">
-        <table>
+<body class="pt-2 bg-primary-subtle"> <!-- Subtle blue page background -->
 
-            <tr>
-                <td >
-                <td >
-                    <img src="images/NSCDXVIIC-Logo-Color-Trans.png" alt="CDXVII Logo" class="img-thumbnail me-2"
-                        style="height: 150px; width: auto;">
-                </td>
-                <td >
-                    <h3 >Colonial Dames XVII Century</h3>
-                <td class="text text-lg-center p-5">
-                    <h2 class="text-lg-center text-warning">Looking Glass Chapter<br>Lansing, Michigan
-                </td>
-            </tr>
-        </table>
-        </tbody>
-    </div>
+    <div id="main-container" class="container bg-light p-1">
+        <div class="text-end">
+            <form class="d-inline-flex" role="search">
+                <input class="form-control form-control-sm me-2 border-warning" type="search"
+                    placeholder="Enter search item" aria-label="Search">
+                <button class="btn btn-sm btn-outline-warning text-primary fw-bolder form-control::placeholder"
+                    type="submit">Search</button>
+            </form>
+        </div>
 
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contactform.html" target="_blank">Contact Form</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
+        <!-- Title section with image and chapter info -->
+        <div class="container bg-light-subtle text-warning outlined-text mt-4 fs-4">
+            <div class="row align-items-center g-3">
 
+                <!-- Chapter logo -->
+                <div class="col-md-2 text-center">
+                    <img src="images/NSCDXVIIC-Logo-Color-Trans.png" alt="CDXVII Logo" class="img-fluid">
                 </div>
+
+                <!-- Main organization name -->
+                <div class="col-md-2 text-left text-md-start">
+                    <h3>Colonial Dames XVII Century</h3>
+                </div>
+
+                <!-- Chapter name and location -->
+                <div class="col-md-4 text-left p-3">
+                    <h2>Looking Glass Chapter<br>Lansing, Michigan</h2>
+                </div>
+
+
             </div>
-        </nav>
+        </div>
+
+
+        <!-- Navigation Bar -->
+        <div>
+            <nav class="navbar navbar-expand-lg bg-body-secondary">
+                <div class="container-fluid">
+                    <!-- Navbar toggle button for mobile -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <!-- Collapsible nav items -->
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0 ">
+
+                            <!-- Active/Home link -->
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="index.html">Home</a>
+                            </li>
+
+                            <!-- Contact Form link -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="contactform.html">Join Us</a>
+                            </li>
+
+                            <!-- Ancestors link -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="ancestors.html">Ancestors</a>
+                            </li>
+
+                            <!-- Dropdown menu -->
+                            <!-- >
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="true">
+                                        Dropdown
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                            </!-->
+
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <!-- Informational section about the organization -->
+        <div>
+            <p class="pt-3">The Colonial Dames XVII Century society is dedicated to historic Preservation, Education,
+                and Patriotism.</p>
+        </div>
     </div>
+
 </body>
 
 </html>
