Refactor HTML structure and improve styling; enhance navigation and table layout

--- a/contactform.html
+++ b/contactform.html
@@ -39,7 +39,7 @@
   
                 <!-- Contact Form link -->
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="contactform.html"><b>Join Us</b></a>
+                  <a class="nav-link active" aria-current="page" href="contactform.html">Join Us</a>
                 </li>
   
                 <!-- Ancestors link -->
@@ -73,8 +73,9 @@
   
   </header>
     <!-- Informational content section -->
-    <div class="container bg-light-subtle mt-4 fs-6">
-      <h1>Join Us</h1>
+    <div class="container bg-light-subtle mb-2 mt-4 fs-5 w-75 mx-auto p-2">
+        <h1 class="mb-2 text-warning outlined-text">Join Us</h1>
+     
       <p>Do you have an ancestor in your family tree who lived in the 17th century and either held an office or owned
         land?</p>
       <p>Someone who fought for our freedom or served in a civil capacity, or aided and supported the patriotic cause in
