--- a/ancestors.html
+++ b/ancestors.html
@@ -2,20 +2,23 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags for character encoding and responsive design -->
     <meta charset="UTF-8">
     <title>Patriot Table</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap 5 CSS from CDN for responsive grid and UI components -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- DataTables Bootstrap 5 CSS -->
+
+    <!-- DataTables CSS for styling table with Bootstrap 5 look -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+
+    <!-- Your custom stylesheet -->
     <link rel="stylesheet" href="css/style.css">
-
-
 </head>
 
 <body class="pt-2 bg-primary-subtle">
+
     <!-- Navigation Bar -->
     <header>
         <div>
@@ -34,36 +37,36 @@
 
                             <!-- Active/Home link -->
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html"><span>Home</span></a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
 
                             <!-- Contact Form link -->
                             <li class="nav-item">
-                                <a class="nav-link" href="contactform.html">Join Us</a>
+                                <a class="nav-link" aria-current="page" href="contactform.html">Join Us</a>
                             </li>
 
                             <!-- Ancestors link -->
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="ancestors.html">Ancestors</a>
+                                <a class="nav-link active" href="ancestors.html">Ancestors</a>
                             </li>
 
                             <!-- Dropdown menu -->
                             <!-- >
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button"
-                                            data-bs-toggle="dropdown" aria-expanded="true">
-                                            Dropdown
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li>
-                                                <hr class="dropdown-divider">
-                                            </li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
-                                    </li>
-                                </!-->
+                                  <li class="nav-item dropdown">
+                                      <a class="nav-link dropdown-toggle" href="#" role="button"
+                                          data-bs-toggle="dropdown" aria-expanded="true">
+                                          Dropdown
+                                      </a>
+                                      <ul class="dropdown-menu">
+                                          <li><a class="dropdown-item" href="#">Action</a></li>
+                                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                                          <li>
+                                              <hr class="dropdown-divider">
+                                          </li>
+                                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                      </ul>
+                                  </li>
+                              </!-->
 
                         </ul>
                     </div>
@@ -72,9 +75,10 @@
         </div>
 
     </header>
-    <div class="container bg-light-subtle mb-2 mt-4 fs-4 w-75 mx-auto p-2">
 
-        <h2 class="mb-2 text-warning outlined-text ">Our Ancestors</h2>
+    <!-- Introduction text block -->
+    <div class="container bg-light-subtle mb-2 mt-4 fs-4 w-75 mx-auto p-2">
+        <h1 class="mb-2 text-warning outlined-text">Our Ancestors</h1>
         <p class="fs-6">
             Members of the Looking Glass Chapter of the Colonial Dames XVII Century are direct descendants of ancestors
             who lived in the 17th century and held an office or owned land. The table below lists the name and state of
@@ -82,86 +86,60 @@
             sorted by each category.
         </p>
     </div>
-    <div class="table-responsive w-75 mx-auto">
-        <table id="ancestorTable" class="table table-w table-sm table-hover table-bordered table-striped">
-            <thead>
-                <tr class="warning">
-                    <th>Last Name</th>
-                    <th>First Name</th>
-                    <th>State Served</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Stepp</td>
-                    <td>Moses</td>
-                    <td>North Carolina</td>
-                </tr>
-                <tr>
-                    <td>Allen</td>
-                    <td>James</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Allen</td>
-                    <td>John</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Altizera</td>
-                    <td>Emera</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Anderson</td>
-                    <td>James</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Anderson</td>
-                    <td>William</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Anthony</td>
-                    <td>Jacob</td>
-                    <td>Pennsylvania</td>
-                </tr>
-                <tr>
-                    <td>Atkinson</td>
-                    <td>Samuel</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Avery</td>
-                    <td>Ebenezer</td>
-                    <td>Connecticut</td>
-                </tr>
-                <tr>
-                    <td>Axline</td>
-                    <td>Adam</td>
-                    <td>Virginia</td>
-                </tr>
-                <tr>
-                    <td>Bacon</td>
-                    <td>Oliver</td>
-                    <td>New Hampshire</td>
-                </tr>
-            </tbody>
-        </table>
+
+<!-- Bootstrap Grid Wrapper -->
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10 col-lg-8">
+            <!-- Responsive Table -->
+            <div class="table-responsive">
+                <table id="ancestorTable" class="table table-w table-sm table-hover table-bordered table-striped">
+                    <thead>
+                        <tr class="warning">
+                            <!-- Table column headers -->
+                            <th>Last Name</th>
+                            <th>First Name</th>
+                            <th>State Served</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Static data rows for ancestors -->
+                        <tr><td>Stepp</td><td>Moses</td><td>North Carolina</td></tr>
+                        <tr><td>Allen</td><td>James</td><td>Virginia</td></tr>
+                        <tr><td>Allen</td><td>John</td><td>Virginia</td></tr>
+                        <tr><td>Altizera</td><td>Emera</td><td>Virginia</td></tr>
+                        <tr><td>Anderson</td><td>James</td><td>Virginia</td></tr>
+                        <tr><td>Anderson</td><td>William</td><td>Virginia</td></tr>
+                        <tr><td>Anthony</td><td>Jacob</td><td>Pennsylvania</td></tr>
+                        <tr><td>Atkinson</td><td>Samuel</td><td>Virginia</td></tr>
+                        <tr><td>Avery</td><td>Ebenezer</td><td>Connecticut</td></tr>
+                        <tr><td>Axline</td><td>Adam</td><td>Virginia</td></tr>
+                        <tr><td>Bacon</td><td>Oliver</td><td>New Hampshire</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    S
-    <!-- JS Libraries -->
+</div>
+
+    <!-- JS Libraries for jQuery and DataTables -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
+    <!-- Initialize DataTables for enhanced interactivity -->
     <script>
         $(document).ready(function () {
-            $('#ancestorTable').DataTable({
+            const table = $('#ancestorTable').DataTable({
                 paging: false,
                 searching: true,
-                info: false,
+                info: true
             });
+
+            // Make only the word "Search" bold
+            const label = $('#ancestorTable_filter label');
+            const html = label.html().replace('Search:', '<strong>Search:</strong>');
+            label.html(html);
         });
     </script>
 </body>
