--- a/contactform.html
+++ b/contactform.html
@@ -8,6 +8,8 @@
 
   <!-- Bootstrap 5 CDN for styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom Style Sheet -->
   <link rel="stylesheet" href="css\style.css">
 </head>
 
@@ -18,61 +20,47 @@
 
     <!-- Navbar -->
   <header>
-      <div>
-        <nav class="navbar navbar-expand-lg bg-body-secondary">
-          <div class="container-fluid">
-            <!-- Navbar toggle button for mobile -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-  
-            <!-- Collapsible nav items -->
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
-              <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0 ">
-  
-                <!-- Active/Home link -->
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-  
-                <!-- Contact Form link -->
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="contactform.html">Join Us</a>
-                </li>
-  
-                <!-- Ancestors link -->
-                <li class="nav-item">
-                  <a class="nav-link" href="ancestors.html">Ancestors</a>
-                </li>
-  
-                <!-- Dropdown menu -->
-                <!-- >
-                                  <li class="nav-item dropdown">
-                                      <a class="nav-link dropdown-toggle" href="#" role="button"
-                                          data-bs-toggle="dropdown" aria-expanded="true">
-                                          Dropdown
-                                      </a>
-                                      <ul class="dropdown-menu">
-                                          <li><a class="dropdown-item" href="#">Action</a></li>
-                                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                                          <li>
-                                              <hr class="dropdown-divider">
-                                          </li>
-                                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                      </ul>
-                                  </li>
-                              </!-->
-  
-              </ul>
-            </div>
+  <div>
+    <div id="main-container" class="container bg-light p-1">
+      <nav class="navbar navbar-expand-lg bg-body-secondary">
+        <div class="container-fluid">
+
+          <!-- Brand -->
+          <a class="navbar-brand text-warning outlined-text" href="#">CDXVIIC</a>
+
+          <!-- ✅ Only one hamburger menu button needed -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Collapsible nav items -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav justify-content-center mx-auto mb-2 mb-lg-0">
+
+              <!-- Home link -->
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+
+              <!-- Join Us link -->
+              <li class="nav-item">
+                <a class="nav-link active" href="contactform.html">Join Us</a>
+              </li>
+
+              <!-- Ancestors link (active) -->
+              <li class="nav-item">
+                <a class="nav-link" href="ancestors.html">Ancestors</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </div>
-  
-  </header>
-    <!-- Informational content section -->
+        </div>
+      </nav>
+    </div>
+  </div>
+</header>
+  <!-- Informational content section -->
     <div class="container bg-light-subtle mb-2 mt-4 fs-5 w-75 mx-auto p-2">
         <h1 class="mb-2 text-warning outlined-text">Join Us</h1>
      
@@ -197,5 +185,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 </html>
